--- a/project.json
+++ b/project.json
@@ -937,6 +937,201 @@
 		},
 		"/documents/Pipes_Article1_Body.docx": {
 			"sdcard": false
+		},
+		"/documents/~$pes_Article1_Body.docx": {
+			"sdcard": false
+		},
+		"/documents/images": {
+			"sdcard": false
+		},
+		"/documents/images/Heading.h": {
+			"sdcard": false
+		},
+		"/documents/images/Heading.png": {
+			"sdcard": false
+		},
+		"/documents/images/pipes": {
+			"sdcard": false
+		},
+		"/documents/images/nodes": {
+			"sdcard": false
+		},
+		"/documents/images/pipes/Pipe_Corner_BL.png": {
+			"sdcard": false
+		},
+		"/documents/images/pipes/Pipe_Corner_BL.h": {
+			"sdcard": false
+		},
+		"/documents/images/pipes/Pipe_Corner_BR.png": {
+			"sdcard": false
+		},
+		"/documents/images/pipes/Pipe_Corner_BR.h": {
+			"sdcard": false
+		},
+		"/documents/images/pipes/Pipe_Corner_BR_NoFlange.h": {
+			"sdcard": false
+		},
+		"/documents/images/pipes/Pipe_Corner_BR_NoFlange.png": {
+			"sdcard": false
+		},
+		"/documents/images/pipes/Pipe_Corner_TR_NoFlange.h": {
+			"sdcard": false
+		},
+		"/documents/images/pipes/Pipe_Corner_TL.h": {
+			"sdcard": false
+		},
+		"/documents/images/pipes/Pipe_Corner_TR_NoFlange.png": {
+			"sdcard": false
+		},
+		"/documents/images/pipes/Pipe_Cross.h": {
+			"sdcard": false
+		},
+		"/documents/images/pipes/Pipe_Cross.png": {
+			"sdcard": false
+		},
+		"/documents/images/pipes/Pipe_Cross_Overlap.h": {
+			"sdcard": false
+		},
+		"/documents/images/pipes/Pipe_Cross_Overlap.png": {
+			"sdcard": false
+		},
+		"/documents/images/pipes/Pipe_Cross_Overlap_NoFlange.h": {
+			"sdcard": false
+		},
+		"/documents/images/pipes/Pipe_Cross_Overlap_NoFlange.png": {
+			"sdcard": false
+		},
+		"/documents/images/pipes/Pipe_Cross_Underlap_NoFlange.h": {
+			"sdcard": false
+		},
+		"/documents/images/pipes/Pipe_Cross_Underlap_NoFlange.png": {
+			"sdcard": false
+		},
+		"/documents/images/pipes/Pipe_Nothing.h": {
+			"sdcard": false
+		},
+		"/documents/images/pipes/Pipe_Nothing.png": {
+			"sdcard": false
+		},
+		"/documents/images/pipes/Pipe_Straight_LR.h": {
+			"sdcard": false
+		},
+		"/documents/images/pipes/Pipe_Straight_LR.png": {
+			"sdcard": false
+		},
+		"/documents/images/pipes/Pipe_Straight_LR_NoFlange.h": {
+			"sdcard": false
+		},
+		"/documents/images/pipes/Pipe_Corner_TL.png": {
+			"sdcard": false
+		},
+		"/documents/images/pipes/Pipe_Straight_LR_NoFlange.png": {
+			"sdcard": false
+		},
+		"/documents/images/pipes/Pipe_Straight_TB.h": {
+			"sdcard": false
+		},
+		"/documents/images/pipes/Pipe_Straight_TB_NoFlange.h": {
+			"sdcard": false
+		},
+		"/documents/images/pipes/Pipe_Straight_TB.png": {
+			"sdcard": false
+		},
+		"/documents/images/pipes/Pipe_Straight_TB_NoFlange.png": {
+			"sdcard": false
+		},
+		"/documents/images/pipes/Pipe_Tee_LR_B.h": {
+			"sdcard": false
+		},
+		"/documents/images/pipes/Pipe_Tee_LR_B.png": {
+			"sdcard": false
+		},
+		"/documents/images/pipes/Pipe_Tee_LR_T.h": {
+			"sdcard": false
+		},
+		"/documents/images/pipes/Pipe_Tee_LR_T.png": {
+			"sdcard": false
+		},
+		"/documents/images/pipes/Pipe_Tee_TB_L.h": {
+			"sdcard": false
+		},
+		"/documents/images/pipes/Pipe_Tee_TB_L.png": {
+			"sdcard": false
+		},
+		"/documents/images/pipes/Pipe_Tee_TB_R.h": {
+			"sdcard": false
+		},
+		"/documents/images/pipes/Pipe_Tee_TB_R.png": {
+			"sdcard": false
+		},
+		"/documents/images/pipes/Pipes.h": {
+			"sdcard": false
+		},
+		"/documents/images/nodes/Node1.h": {
+			"sdcard": false
+		},
+		"/documents/images/nodes/Node1.png": {
+			"sdcard": false
+		},
+		"/documents/images/nodes/Node10.png": {
+			"sdcard": false
+		},
+		"/documents/images/nodes/Node10.h": {
+			"sdcard": false
+		},
+		"/documents/images/nodes/Node2.h": {
+			"sdcard": false
+		},
+		"/documents/images/nodes/Node2.png": {
+			"sdcard": false
+		},
+		"/documents/images/nodes/Node3.h": {
+			"sdcard": false
+		},
+		"/documents/images/nodes/Node4.h": {
+			"sdcard": false
+		},
+		"/documents/images/nodes/Node3.png": {
+			"sdcard": false
+		},
+		"/documents/images/nodes/Node4.png": {
+			"sdcard": false
+		},
+		"/documents/images/nodes/Node5.h": {
+			"sdcard": false
+		},
+		"/documents/images/nodes/Node5.png": {
+			"sdcard": false
+		},
+		"/documents/images/nodes/Node6.h": {
+			"sdcard": false
+		},
+		"/documents/images/nodes/Node6.png": {
+			"sdcard": false
+		},
+		"/documents/images/nodes/Node7.h": {
+			"sdcard": false
+		},
+		"/documents/images/nodes/Node7.png": {
+			"sdcard": false
+		},
+		"/documents/images/nodes/Node8.h": {
+			"sdcard": false
+		},
+		"/documents/images/nodes/Node8.png": {
+			"sdcard": false
+		},
+		"/documents/images/nodes/Node9.h": {
+			"sdcard": false
+		},
+		"/documents/images/nodes/Node9.png": {
+			"sdcard": false
+		},
+		"/documents/images/nodes/Nodes.h": {
+			"sdcard": false
+		},
+		"/documents/~$pes_Article1_Callouts.docx": {
+			"sdcard": false
 		}
 	}
 }
